...
            </objects>
            <point key="canvasLocation" x="1450.5" y="-304"/>
        </scene>
        <!--MasterVC-->
        <scene sceneID="tSg-mS-FFk">
            <objects>
                <viewController storyboardIdentifier="ContainerVC" id="agz-qu-EOp" customClass="MasterVC" customModule="Supl" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="gjh-JM-Whz"/>
                        <viewControllerLayoutGuide type="bottom" id="CgZ-Al-SXK"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="57A-oJ-6LV">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                <connections>
                                    <segue destination="V6q-Iq-5uJ" kind="show" id="pYB-Ip-2Be"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HEN-ct-U7n">
                                <rect key="frame" x="532" y="559" width="42" height="30"/>
                                <state key="normal" title="DALŠÍ">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="didTapNextButton:" destination="agz-qu-EOp" eventType="touchUpInside" id="3Hk-Bv-yNl"/>
                                </connections>
                            </button>
...
