...
                            <outlet property="dataSource" destination="hwT-Ho-ce3" id="ILS-RQ-AST"/>
                            <outlet property="delegate" destination="hwT-Ho-ce3" id="Uec-2i-cPR"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Supl" id="6jh-mZ-4wo">
                        <barButtonItem key="leftBarButtonItem" image="Settings" style="done" id="SmI-F0-cA6">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="S8N-P1-y7k" kind="show" identifier="showSettingsViewController" id="aNJ-xz-NdA"/>
                            </connections>
                        </barButtonItem>
                        <connections>
...
